# Read

./: .gitignore  README.md  electron-builder.json  electron.vite.config.ts  package-lock.json  package.json  start.bat  tailwind.config.js  tsconfig.json
particlebook-cpp/: CMakeLists.txt  test_zip.cpp
particlebook-cpp/build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ParticleBook.sln  ParticleBook.vcxproj  ParticleBook.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  installer.sed  latest.yml
particlebook-cpp/build2/Debug/renderer/: index.html
particlebook-cpp/build2/Debug/renderer/assets/: BookSourcePanel-DvXHYkVT.js  ChangelogPanel-CA5OQuNA.js  ComicRenderer-W0cHQlSt.js  EpubRenderer-rn540g4W.js  GlobalSettings-BGahnyY_.js  HtmlRenderer-BzvSC3Ah.js  PdfRenderer-COa2XIo6.js  SettingsPanel-vTtB1TLA.js  StatisticsPanel-C9SjXReq.js  TextRenderer-O3I_b76H.js  ZLibraryView-5kcTzjrR.js  index-Dc6Yu-j7.js  index-Do15SsBz.css  jszip.min-BEHwrGSG.js
particlebook-cpp/build2/ParticleBook-Setup-v2.0.0/renderer/assets/: GlobalSettings-BnPuSaCU.js  SettingsPanel-BW0lo3Tl.js  TextRenderer-BH6ZaJIP.js
particlebook-cpp/build2/ParticleBook-v2.0.0-clean/ParticleBook/: install.bat
particlebook-cpp/build2/ParticleBook-v2.0.0-clean/ParticleBook/renderer/: index.html
particlebook-cpp/build2/ParticleBook-v2.0.0-clean/ParticleBook/renderer/assets/: ChangelogPanel-DFHCiJnT.js  PdfRenderer-C74G3lyQ.js  index-D5YUh_2q.css  index-DYVh4C-w.js  jszip.min-DE8TlDjW.js  pdf-BJAF3mHZ.js
particlebook-cpp/build2/ParticleBook-v2.0.0/ParticleBook/renderer/assets/: BookSourcePanel-BonNDQhn.js  ComicRenderer-DBTO4q3k.js  EpubRenderer-B8rACOOK.js  (+3 more)
particlebook-cpp/build2/ParticleBook.dir/Debug/: ParticleBook.exe.recipe
particlebook-cpp/build2/ParticleBook.dir/Debug/ParticleBook.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
particlebook-cpp/build2/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
particlebook-cpp/build2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
particlebook-cpp/scripts/: build_installer.sed  generate_icon.js  generate_icon.ps1  installer.nsi  installer_sed.txt
particlebook-cpp/src/: App.cpp  App.h  BridgeServer.cpp  BridgeServer.h  ParticleBook.rc  WebViewHost.cpp  WebViewHost.h  main.cpp  zlib_toolbar.js
particlebook-cpp/src/handlers/: DbHandlers.cpp  DbHandlers.h  FileHandlers.cpp  FileHandlers.h
particlebook-cpp/src/services/: BookSourceService.cpp  BookSourceService.h  ContentCache.cpp  ContentCache.h  DatabaseService.cpp  DatabaseService.h  LibraryService.cpp  LibraryService.h  PdfService.cpp  PdfService.h  ZLibraryService.cpp  ZLibraryService.h
particlebook-cpp/src/utils/: ZipReader.cpp  ZipReader.h
test-app/: m.js  (+1 more)
(+56 files in other folders)
